# Gesture

./: build.gradle  settings.gradle
afrecog/: CMakeLists.txt  build.gradle
afrecog/dlib/include/dlib/image_transforms/: random_cropper.h
afrecog/dlib/libs/cmake/dlib/: dlib-release.cmake  dlib.cmake
afrecog/dlib/libs/pkgconfig/: dlib-1.pc
afrecog/include/: Detector.h  FImageRect.h  Puntos.h  Recognizer.h
afrecog/opencv/include/opencv2/: opencv_modules.hpp
afrecog/src/androidTest/java/co/edu/fuac/afrecog/: ExampleInstrumentedTest.java
afrecog/src/main/: AndroidManifest.xml
afrecog/src/main/cpp/: AFContext.cpp  Detector.cpp  FImage.cpp  FImageContext.cpp  FImageRect.cpp  HaarDetector.cpp  HoGDetector.cpp  LBPHRecognizer.cpp  Puntos.cpp  Recognizer.cpp
afrecog/src/main/cpp/include/: AFContext.h  FImage.h  FImageContext.h  HaarDetector.h  HoGDetector.h  LBPHRecognizer.h
afrecog/src/main/java/co/edu/fuac/afrecog/: FImage.java  FImageContext.java  FaceContext.java  RecogData.java  Rect.java  puntos.java
afrecog/src/main/jni/: jniAdapter.cpp
afrecog/src/main/res/values/: strings.xml
afrecog/src/test/java/co/edu/fuac/afrecog/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/co/edu/fuac/gesture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/co/edu/fuac/gesture/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/co/edu/fuac/gesture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
